plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.myseotoolbox'
version = '1.14.8-SNAPSHOT'


java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

bootJar {
    archiveBaseName.set('crawler')
    archiveVersion.set('')
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://jitpack.io' }
}



configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

tasks.register('getProjectProperties') {
    doLast {
        println rootProject.group + ":" + rootProject.name + ":" + rootProject.version + ":" + rootProject.name
    }
}

tasks.named('test') {
    failFast = true
    testLogging.showStandardStreams = true
    testLogging.exceptionFormat = 'full'
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}


ext {
    set('springCloudGcpVersion', "5.0.0")
    set('springCloudVersion', "2023.0.0")
}


dependencies {
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
    implementation 'com.google.cloud:spring-cloud-gcp-starter-pubsub'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.github.salvatorenovelli:gcp-commons:2.2.0'

    implementation group: 'commons-lang', name: 'commons-lang', version: '2.2'
    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
    implementation('org.jsoup:jsoup:1.18.1')
    implementation group: 'com.github.crawler-commons', name: 'crawler-commons', version: '1.4'

    testCompileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation group: 'net.jodah', name: 'failsafe', version: '2.1.0'
    implementation 'commons-io:commons-io:2.14.0'

    implementation 'org.apache.httpcomponents:httpclient'


    implementation group: 'io.vavr', name: 'vavr', version: '0.9.3'
    implementation 'org.projectlombok:lombok'
    implementation 'com.google.guava:guava:33.2.0-jre'

    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.14.0'
    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring3x:4.14.0'

    testImplementation 'org.eclipse.jetty:jetty-server:9.4.8.v20171121'
    testImplementation 'org.eclipse.jetty:jetty-util:9.4.8.v20171121'
    testImplementation 'org.eclipse.jetty:jetty-io:9.4.8.v20171121'
    testImplementation 'org.eclipse.jetty:jetty-http:9.4.8.v20171121'


    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'

    dependencyManagement {
        imports {
            mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

}